cmake_minimum_required(VERSION 3.10)

set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

project(tinySA4 LANGUAGES C)

add_executable(${PROJECT_NAME} WIN32)

target_sources(${PROJECT_NAME} PRIVATE
	ChibiOS/os/common/ext/CMSIS/ST/STM32F3xx/stm32f303xc.h
	ChibiOS/os/common/ext/CMSIS/ST/STM32F3xx/stm32f3xx.h
	ChibiOS/os/common/ext/CMSIS/ST/STM32F3xx/system_stm32f3xx.h
	ChibiOS/os/common/ext/CMSIS/include/core_cm4.h
	ChibiOS/os/common/ext/CMSIS/include/core_cmFunc.h
	ChibiOS/os/common/ext/CMSIS/include/core_cmInstr.h
	ChibiOS/os/common/ext/CMSIS/include/core_cmSimd.h
	ChibiOS/os/common/oslib/include/chbsem.h
	ChibiOS/os/common/oslib/include/chheap.h
	ChibiOS/os/common/oslib/include/chmboxes.h
	ChibiOS/os/common/oslib/include/chmemcore.h
	ChibiOS/os/common/oslib/include/chmempools.h
	ChibiOS/os/common/ports/ARMCMx/chcore.c
	ChibiOS/os/common/ports/ARMCMx/chcore.h
	ChibiOS/os/common/ports/ARMCMx/chcore_timer.h
	ChibiOS/os/common/ports/ARMCMx/chcore_v7m.c
	ChibiOS/os/common/ports/ARMCMx/chcore_v7m.h
	ChibiOS/os/common/ports/ARMCMx/compilers/GCC/chcoreasm_v7m.s
	ChibiOS/os/common/ports/ARMCMx/compilers/GCC/chtypes.h
	ChibiOS/os/common/ports/ARMCMx/mpu.h
	ChibiOS/os/common/startup/ARMCMx/compilers/GCC/crt0_v7m.s
	ChibiOS/os/common/startup/ARMCMx/compilers/GCC/crt1.c
	ChibiOS/os/common/startup/ARMCMx/compilers/GCC/vectors.c
	ChibiOS/os/common/startup/ARMCMx/compilers/GCC/vectors.h
	ChibiOS/os/common/startup/ARMCMx/devices/STM32F3xx/cmparams.h
	ChibiOS/os/hal/include/hal.h
	ChibiOS/os/hal/include/hal_adc.h
	ChibiOS/os/hal/include/hal_buffers.h
	ChibiOS/os/hal/include/hal_can.h
	ChibiOS/os/hal/include/hal_channels.h
	ChibiOS/os/hal/include/hal_dac.h
	ChibiOS/os/hal/include/hal_ext.h
	ChibiOS/os/hal/include/hal_files.h
	ChibiOS/os/hal/include/hal_gpt.h
	ChibiOS/os/hal/include/hal_i2c.h
	ChibiOS/os/hal/include/hal_i2s.h
	ChibiOS/os/hal/include/hal_icu.h
	ChibiOS/os/hal/include/hal_ioblock.h
	ChibiOS/os/hal/include/hal_mac.h
	ChibiOS/os/hal/include/hal_mmc_spi.h
	ChibiOS/os/hal/include/hal_mmcsd.h
	ChibiOS/os/hal/include/hal_pal.h
	ChibiOS/os/hal/include/hal_pwm.h
	ChibiOS/os/hal/include/hal_queues.h
	ChibiOS/os/hal/include/hal_rtc.h
	ChibiOS/os/hal/include/hal_sdc.h
	ChibiOS/os/hal/include/hal_serial.h
	ChibiOS/os/hal/include/hal_serial_usb.h
	ChibiOS/os/hal/include/hal_spi.h
	ChibiOS/os/hal/include/hal_st.h
	ChibiOS/os/hal/include/hal_streams.h
	ChibiOS/os/hal/include/hal_uart.h
	ChibiOS/os/hal/include/hal_usb.h
	ChibiOS/os/hal/include/hal_usb_cdc.h
	ChibiOS/os/hal/include/hal_wdg.h
	ChibiOS/os/hal/lib/streams/chprintf.h
	ChibiOS/os/hal/lib/streams/memstreams.c
	ChibiOS/os/hal/lib/streams/memstreams.h
	ChibiOS/os/hal/lib/streams/nullstreams.c
	ChibiOS/os/hal/lib/streams/nullstreams.h
	ChibiOS/os/hal/osal/rt/osal.c
	ChibiOS/os/hal/osal/rt/osal.h
	ChibiOS/os/hal/ports/STM32/LLD/ADCv3/hal_adc_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/DMAv1/stm32_dma.c
	ChibiOS/os/hal/ports/STM32/LLD/DMAv1/stm32_dma.h
	ChibiOS/os/hal/ports/STM32/LLD/EXTIv1/hal_ext_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/EXTIv1/hal_ext_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/GPIOv2/hal_pal_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/GPIOv2/hal_pal_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1/hal_gpt_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1/hal_gpt_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1/hal_pwm_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1/hal_pwm_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1/hal_st_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1/hal_st_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1/stm32_tim.h
	ChibiOS/os/hal/ports/STM32/LLD/USARTv2/hal_serial_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/USARTv2/hal_serial_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/USBv1/hal_usb_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/USBv1/hal_usb_lld.h
	ChibiOS/os/hal/ports/STM32/LLD/USBv1/stm32_usb.h
	ChibiOS/os/hal/ports/STM32/LLD/xWDGv1/hal_wdg_lld.c
	ChibiOS/os/hal/ports/STM32/LLD/xWDGv1/hal_wdg_lld.h
	ChibiOS/os/hal/ports/STM32/STM32F3xx/hal_ext_lld_isr.c
	ChibiOS/os/hal/ports/STM32/STM32F3xx/hal_ext_lld_isr.h
	ChibiOS/os/hal/ports/STM32/STM32F3xx/hal_lld.c
	ChibiOS/os/hal/ports/STM32/STM32F3xx/hal_lld.h
	ChibiOS/os/hal/ports/STM32/STM32F3xx/stm32_isr.h
	ChibiOS/os/hal/ports/STM32/STM32F3xx/stm32_rcc.h
	ChibiOS/os/hal/ports/STM32/STM32F3xx/stm32_registry.h
	ChibiOS/os/hal/ports/common/ARMCMx/nvic.c
	ChibiOS/os/hal/ports/common/ARMCMx/nvic.h
	ChibiOS/os/hal/src/hal.c
	ChibiOS/os/hal/src/hal_adc.c
	ChibiOS/os/hal/src/hal_buffers.c
	ChibiOS/os/hal/src/hal_ext.c
	ChibiOS/os/hal/src/hal_gpt.c
	ChibiOS/os/hal/src/hal_mmcsd.c
	ChibiOS/os/hal/src/hal_pal.c
	ChibiOS/os/hal/src/hal_pwm.c
	ChibiOS/os/hal/src/hal_queues.c
	ChibiOS/os/hal/src/hal_serial.c
	ChibiOS/os/hal/src/hal_serial_usb.c
	ChibiOS/os/hal/src/hal_st.c
	ChibiOS/os/hal/src/hal_usb.c
	ChibiOS/os/hal/src/hal_wdg.c
	ChibiOS/os/license/chcustomer.h
	ChibiOS/os/license/chlicense.h
	ChibiOS/os/rt/include/ch.h
	ChibiOS/os/rt/include/chalign.h
	ChibiOS/os/rt/include/chchecks.h
	ChibiOS/os/rt/include/chcond.h
	ChibiOS/os/rt/include/chdebug.h
	ChibiOS/os/rt/include/chdynamic.h
	ChibiOS/os/rt/include/chevents.h
	ChibiOS/os/rt/include/chmsg.h
	ChibiOS/os/rt/include/chmtx.h
	ChibiOS/os/rt/include/chregistry.h
	ChibiOS/os/rt/include/chschd.h
	ChibiOS/os/rt/include/chsem.h
	ChibiOS/os/rt/include/chstats.h
	ChibiOS/os/rt/include/chsys.h
	ChibiOS/os/rt/include/chsystypes.h
	ChibiOS/os/rt/include/chthreads.h
	ChibiOS/os/rt/include/chtm.h
	ChibiOS/os/rt/include/chtrace.h
	ChibiOS/os/rt/include/chvt.h
	ChibiOS/os/rt/src/chdebug.c
	ChibiOS/os/rt/src/chregistry.c
	ChibiOS/os/rt/src/chschd.c
	ChibiOS/os/rt/src/chsys.c
	ChibiOS/os/rt/src/chthreads.c
	ChibiOS/os/rt/src/chtrace.c
	ChibiOS/os/rt/src/chvt.c
	FatFs/diskio.h
	FatFs/ff.c
	FatFs/ff.h
	FatFs/ffconf.h
	FatFs/ffunicode.c
	Font10x14.c
	Font5x7.c
	Font7x13b.c
	NANOVNA_STM32_F303/adc.c
	NANOVNA_STM32_F303/board.c
	NANOVNA_STM32_F303/board.h
	NANOVNA_STM32_F303/mcuconf.h
	chconf.h
	chprintf.c
	flash.c
	hal_adc_lld.c
	halconf.h
	ili9341.c
	main.c
	mcuconf.h
	nanovna.h
	numfont20x22.c
	plot.c
	radio_config_Si4468_100kHz.h
	radio_config_Si4468_10kHz.h
	radio_config_Si4468_1kHz.h
	radio_config_Si4468_200Hz.h
	radio_config_Si4468_300kHz.h
	radio_config_Si4468_30kHz.h
	radio_config_Si4468_3kHz.h
	radio_config_Si4468_600kHz.h
	radio_config_Si4468_850kHz.h
	radio_config_Si4468_default.h
	radio_config_Si4468_short.h
	radio_config_Si4468_undef.h
	rtc.c
	sa_cmd.c
	sa_core.c
	si4432.h
	si4468.c
	si446x.h
	si446x_cmd.h
	si446x_defs.h
	si5351.c
	si5351.h
	spi.h
	tlv320aic3204.c
	ui.c
	usbcfg.c
	usbcfg.h
	vna_browser.c
	waterfall.c
)

target_compile_definitions(${PROJECT_NAME} PRIVATE
	__FPU_USED
	ARM_MATH_CM4
	CORTEX_USE_FPU=TRUE
	ST7796S
	THUMB_NO_INTERWORKING
	THUMB_PRESENT
	TINYSA4
	TINYSA_F303
	USB_DP_R_VDD
	VNA_USE_LSE
	# TODO: VERSION
)

target_include_directories(${PROJECT_NAME} PRIVATE
	ChibiOS/os/common/ext/CMSIS/ST/STM32F3xx
	ChibiOS/os/common/ext/CMSIS/include
	ChibiOS/os/common/oslib/include
	ChibiOS/os/common/ports/ARMCMx
	ChibiOS/os/common/ports/ARMCMx/compilers/GCC
	ChibiOS/os/common/startup/ARMCMx/compilers/GCC
	ChibiOS/os/common/startup/ARMCMx/devices/STM32F3xx
	ChibiOS/os/hal/include
	ChibiOS/os/hal/lib/streams
	ChibiOS/os/hal/osal/rt
	ChibiOS/os/hal/ports/STM32/LLD/ADCv3
	ChibiOS/os/hal/ports/STM32/LLD/CANv1
	ChibiOS/os/hal/ports/STM32/LLD/DACv1
	ChibiOS/os/hal/ports/STM32/LLD/DMAv1
	ChibiOS/os/hal/ports/STM32/LLD/EXTIv1
	ChibiOS/os/hal/ports/STM32/LLD/GPIOv2
	ChibiOS/os/hal/ports/STM32/LLD/I2Cv2
	ChibiOS/os/hal/ports/STM32/LLD/RTCv2
	ChibiOS/os/hal/ports/STM32/LLD/SPIv2
	ChibiOS/os/hal/ports/STM32/LLD/TIMv1
	ChibiOS/os/hal/ports/STM32/LLD/USARTv2
	ChibiOS/os/hal/ports/STM32/LLD/USBv1
	ChibiOS/os/hal/ports/STM32/LLD/xWDGv1
	ChibiOS/os/hal/ports/STM32/STM32F3xx
	ChibiOS/os/hal/ports/common/ARMCMx
	ChibiOS/os/license
	ChibiOS/os/rt/include
	NANOVNA_STM32_F303
)

# TODO: source_group(...)
#
